# Regulations-Agent-System-Backend

./: .env.example  README.md  pyproject.toml
agent/backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
agent/backend/src/: main.py
agent/backend/src/Agent/: db_agent.py  multi_agent.py  web_agent.py
agent/backend/src/Tools/: hybrid_retriever_tool.py
agent/frontend/: .gitignore  next-env.d.ts  package-lock.json
agent/frontend/.next/: trace
agent/frontend/.next/cache/webpack/client-development/: index.pack.gz.old
agent/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
agent/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
agent/frontend/.next/server/vendor-chunks/: @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  next.js  proxy-from-env.js  supports-color.js
agent/frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
agent/frontend/.next/static/webpack/: webpack.ff34da6a66b6e464.hot-update.js
agent/frontend/.next/types/app/: layout.ts  page.ts
agent/frontend/src/app/: page.tsx
app/: main.py
app/Agent/: db_agent.py  multi_agent.py  web_agent.py
app/Tools/: web_search_tool.py
(+4 files in other folders)
